@@ -68,4 +68,15 @@ INSERT INTO `labels` (`id`, `module`, `field`, `module_name`, `field_name`, `cod
 (uuid(), 'InstitutionQualityVisits', 'quality_visit_type_id', 'Institution > Visits', 'Visit Type', NULL, NULL, 1, 1, NOW()),
 (uuid(), 'InstitutionQualityVisits', 'institution_class_id', 'Institution > Visits', 'Subject', NULL, NULL, 1, 1, NOW());
 
+--
+-- PHPOE-2463
+--
+
+INSERT INTO `db_patches` VALUES ('PHPOE-2463', NOW());
+
+CREATE TABLE `z_2463_institution_section_students` LIKE `institution_section_students`;
+INSERT INTO `z_2463_institution_section_students` SELECT * FROM `institution_section_students`;
+
+ALTER TABLE `institution_section_students` CHANGE `id` `id` CHAR(36) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL;
+
 UPDATE config_items SET value = '3.4.9' WHERE code = 'db_version';
