@@ -18,4 +18,14 @@ DELETE FROM `labels` WHERE `module` = 'InstitutionQualityVisits' AND `field` = '
 -- db_patches
 DELETE FROM `db_patches` WHERE `issue` = 'PHPOE-2023';
 
+--
+-- PHPOE-2463
+--
+
+DROP TABLE `institution_section_students`;
+ALTER TABLE `z_2463_institution_section_students` RENAME `institution_section_students`;
+
+DELETE FROM `db_patches` WHERE `issue` = 'PHPOE-2463';
+
+
 UPDATE config_items SET value = '3.4.8' WHERE code = 'db_version';
